Fixed runtime BCrypt dependency erro