@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.openjfx.javafxplugin' version '0.0.14'
     id 'application'
     id 'jacoco'
 }
@@ -26,9 +26,6 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.8.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
 
-    // Email sender
-    implementation 'com.sun.mail:javax.mail:1.6.2'
-
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -45,7 +42,8 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j:8.4.0'
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 
-    implementation 'at.favre.lib:bcrypt:0.9.0'
+    // BCrypt for password hashing
+    implementation 'org.mindrot:jbcrypt:0.4'
 
     // JavaFX
     implementation 'org.controlsfx:controlsfx:11.1.2'
@@ -56,12 +54,12 @@ jacocoTestReport {
 }
 
 javafx {
-    version = "17"
+    version = "19"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 application {
-    mainClassName = 'com.oop2.passenger_transport.HelloApplication'
+    mainClass = 'com.oop.passenger_transport.HelloApplication'
 }
 
 test {
@@ -72,7 +70,14 @@ tasks.named('jar') {
     duplicatesStrategy = 'exclude'
     manifest {
         attributes(
-                'Main-Class': 'com.oop2.passenger_transport.HelloApplication'
+                'Main-Class': 'com.oop.passenger_transport.HelloApplication'
         )
+    }
+
+    run {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ] as List<String>
     }
 }
